--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="f-box-txt">
                         
-                        <p> It is our sincerest wish—through the sharing of our dream achievement experiences—that we inspire you to pursue your big dream too.Countless people ponder this question... I certainly did. It took quite a bit of self exploration, many months of research, and a lot of trial and error to help me arrive at a clear conclusion. But, it did happen; and when it finally clicked together, it was as though I found the secret to happiness.This is a place where you can find answers to all the questions in your life - answers that will actually help you overcome any limitations that are keeping you from your goals.</p>
+                        <p> It is our sincerest wish—through the sharing of our dream achievement experiences—that we inspire you to pursue your big dream too.Countless people ponder this question... </p>
                         <a href="">Know More</a>
                     </div>
                 
